--- a/admin/admin.css
+++ b/admin/admin.css
@@ -2,8 +2,8 @@
  * Admin styles.
  *
  * @author Zefau <zefau@mailbox.org>
- * @version 0.3.3
- * @date 2019-09-27
+ * @version 0.3.4
+ * @date 2019-10-12
  *
  */
 .m select {display: block !important}
@@ -43,3 +43,6 @@ pre {display: inline}
 .m [type="checkbox"] + span:not(.lever) {
 	margin-bottom: 3px;
 }
+
+.m .row {margin-bottom: 0 !important}
+.m label {color: #000}
